--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "3"
-members = [ "holosim-examples","programs/*"]
+members = [ "crates/*", "holosim-examples","programs/*"]
 
 [workspace.package]
 version = "0.0.1"
