wip: hackr-ixproc with database support

--- a/crates/hackr-ixproc/.env.example
+++ b/crates/hackr-ixproc/.env.example
@@ -7,3 +7,7 @@ PROGRAMS=SAgeTraQfBMdvGVDJYoEvjnbq5szW7RJPi6obDTDQUF,PprofUW1pURCnMW2si88GWPXEEK
 
 # Logging level (optional, defaults to INFO)
 RUST_LOG=hackr_ixproc=debug,info
+
+# Database URL (optional, for SQLite persistence)
+# Uncomment to enable database support
+# DATABASE_URL=hackr_ixproc.db
