wip: hackr-saproc db stuff

--- a/crates/hackr-ixproc/.env.example
+++ b/crates/hackr-ixproc/.env.example
@@ -10,4 +10,4 @@ RUST_LOG=hackr_ixproc=debug,info
 
 # Database URL (optional, for SQLite persistence)
 # Uncomment to enable database support
-# DATABASE_URL=hackr_ixproc.db
+# DATABASE_URL=hackr.db
