--- a/crates/hackr-saproc/Cargo.toml
+++ b/crates/hackr-saproc/Cargo.toml
@@ -43,3 +43,4 @@ chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.0", features = ["v4"] }
 tokio = { version = "1.45", features = ["full"] }
 hex = "0.4"
+sha2 = "0.10"
