--- a/crates/hackr-saproc/Cargo.toml
+++ b/crates/hackr-saproc/Cargo.toml
@@ -15,6 +15,7 @@ sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"
 staratlas-holosim = { path = "../../programs/holosim" }
 staratlas-player-profile = { path = "../../programs/player_profile" }
 staratlas-profile-faction = { path = "../../programs/profile_faction" }
+ui-holosim = { path = "../ui-holosim" }
 
 # Solana
 solana-sdk = "2.2"
