--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,10 +22,13 @@ solana-program = "2.2"
 solana-program-error = "2.2"
 solana-pubkey = "2.2"
 solana-sdk = "2.2"
+solana-transaction-status = "2.2"
 
 # other
 anyhow = "1.0"
 borsh = "1.5"
+bs58 = "0.5"
+chrono = "0.4"
 dotenv = "0.15"
 envy = "0.4"
 futures-util = "0.3"
